# accounting_backend

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  alembic.ini  docker-compose.yml  go.mod  go.sum  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 3fb33dfe702f_add_users_table.py
app/: config.py
app/db/: postgres.py
app/models/: base.py  user.py
app/routers/: api.py  teachers.py
cmd/: main.go
internal/app/: app.go  pprof.go
internal/app/helpers/: api.go
internal/app/middlewares/: user_info.go
internal/app/routers/: auth.go  index.go
internal/container/: container.go
internal/dto/: auth.go
internal/handler/: auth_handler.go
internal/model/: base.go  user.go
internal/repository/: user_repository.go  user_repository_test.go
internal/service/: auth_service.go  auth_service_test.go  jwt_service.go  jwt_service_test.go  password_hasher.txt
internal/settings/: app_config.go
migrations/: 20260620173717_create_uuid_ext.sql  20260620174631_add_users_table.sql
tests/load/scenarios/: register.js
